--- a/shepherd/android/app/src/main/res/xml/network_security_config.xml
+++ b/shepherd/android/app/src/main/res/xml/network_security_config.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="false">
-        <domain includeSubdomains="true">ec2-52-23-212-121.compute-1.amazonaws.com:8080/evv/clock-in</domain>
-        <domain includeSubdomains="true">ec2-52-23-212-121.compute-1.amazonaws.com:8080/evv/clock-out</domain>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">ec2-52-23-212-121.compute-1.amazonaws.com</domain>
+        <domain includeSubdomains="true">ec2-52-23-212-121.compute-1.amazonaws.com</domain>
     </domain-config>
     
 </network-security-config>
